--- a/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
+++ b/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
@@ -2145,6 +2145,16 @@
     "\n",
     "Para nuestro problema de aplicación es mejor ya que no clasifica ningún paciente con enfermedad como paciente sano, con lo cual mejora en ese aspecto con respecto al modelo anterior."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Conclusiones\n",
+    "\n",
+    "- El modelo de Decision Tree, aunque clasifica muy bien por lo que hemos podido observar, da algunos falsos negativos que es lo que no nos interesa en este caso.\n",
+    "- El modelo de Random Forest, consigue optimizar la clasificación de manera que a priori no nos da falsos negativos, con lo cual éste sería el modelo a usar para este problema."
+   ]
   }
  ],
  "metadata": {
