--- a/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
+++ b/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
@@ -8,7 +8,11 @@
     "\n",
     "Se ha desarrollado un nuevo sistema de detección temprana de patologías cardiovasculares. Sin embargo, hacer la prueba y el diagnóstico es un proceso costoso y lento. Por lo tanto, tu compañía te pide desarrollar un algoritmo para eliminar casos que no requieren de una detección tan fina.\n",
     "\n",
-    "El dataset a utilizar es el que aparece en la carpeta: [Cardiovascular Disease Dataset](./Cardiovascular_Disease_Dataset.csv)"
+    "El dataset a utilizar es el que aparece en la carpeta: [Cardiovascular Disease Dataset](./Cardiovascular_Disease_Dataset.csv)\n",
+    "\n",
+    "Objetivos a cumplir:\n",
+    "1. Seleccionar un algoritmo para poder detectar pacientes con o sin patología cardiovascular.\n",
+    "2. Mostrar los resultados del algoritmo, respondiendo a las peticiones concretas del cliente."
    ]
   },
   {
