Proyecto 1 ML unsupervised

--- a/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
+++ b/Proyectos_Machine_Learning/Supervised_Learning/Clasificacion_Enfermedades_Cardiovasculares/Enfermedades_Cardiovasculares.ipynb
@@ -39,13 +39,13 @@
     "- ***restingBP:*** Presión arterial en reposo, 94-200 (in mm HG).\n",
     "- ***serumcholestrol:*** Colesterol sérico, 126-564 (in mg/dl).\n",
     "- ***fastingbloodsugar:*** Glucemia en ayunas, 0 (false), 1 (true) > 120 mg/dl.\n",
-    "- ***restingelectro:***  Resultados del electrocardiograma en reposo, 0 (normal), 1 (ST-T wave abnormality), 2 (probable or definite left ventricular hypertrophy).\n",
+    "- ***restingrelectro:***  Resultados del electrocardiograma en reposo, 0 (normal), 1 (ST-T wave abnormality), 2 (probable or definite left ventricular hypertrophy).\n",
     "- ***maxheartrate:*** Frecuencia cardíaca máxima alcanzada, 71-202.\n",
     "- ***exerciseangia:*** Angina inducida por el ejercicio, 0 (no), 1 (yes).\n",
     "- ***oldpeak:*** Viejo pico = ST, 0-6.2.\n",
     "- ***slope:*** Pendiente del segmento ST del ejercicio máximo, 1 (pendiente ascendente), 2 (plana), 3 (pendiente descendente).\n",
     "- ***noofmajorvessels:*** Número de vasos mayores (0, 1, 2, 3).\n",
-    "- ***tarjet*** Clasificación resultado 0 (Ausencia de enfermedad cardíaca), 1 (Presencia de enfermedad cardíaca)."
+    "- ***target*** Clasificación resultado 0 (Ausencia de enfermedad cardíaca), 1 (Presencia de enfermedad cardíaca)."
    ]
   },
   {
