--- a/Proyectos_Deep_Learning/Recomendador_peliculas/Recomendador_peliculas.ipynb
+++ b/Proyectos_Deep_Learning/Recomendador_peliculas/Recomendador_peliculas.ipynb
@@ -393,8 +393,9 @@
     "    data_films['clean_plot'] = data_films['Plot'].apply(preprocess)\n",
     "    data_films.to_csv('movies_clean.csv', index=False)\n",
     "else:\n",
-    "    data_films_clean = pd.read_csv(\"movies_clean.csv\")\n",
-    "\n",
+    "    print(\"El archivo ya existe.\")\n",
+    "    \n",
+    "data_films_clean = pd.read_csv(\"movies_clean.csv\")\n",
     "data_films_clean.head()"
    ]
   },
